force-app/main/default/objects/EmailMessage/fields/Solve_Email__c.field-meta.xml
<CustomField>
    <fullName>Solve_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sent using Forethought Solve recommendation Screen flow</description>
    <label>Solve Email</label>
    <type>Checkbox</type>
</CustomField>