force-app/main/default/objects/EmailMessage/fields/Ticket_Id__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Ticket Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>