force-app/main/default/objects/EmailMessage/fields/Unread_Email__c.field-meta.xml
<CustomField>
    <fullName>Unread_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>We are using this field to check whether this email has been read or not</description>
    <label>Unread Email</label>
    <type>Checkbox</type>
</CustomField>