force-app/main/default/objects/EmailMessage/validationRules/Prevent_Email_On_Auto_Solve_Cases.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Email_On_Auto_Solve_Cases</fullName>
    <active>true</active>
    <description>This VR prevents the user from updating the case status to &apos;Awaiting Response&apos; if there is a valid auto-solve response on the case.</description>
    <errorConditionFormula>AND( Parent.Record_Type_Name__c = &apos;Engagement&apos;, $Permission.CX_Labs_Custom_Permission,
NOT(Incoming), 
ISPICKVAL(Parent.Auto_Solve_Status__c, &apos;Eligible&apos;),
NOT(ISPICKVAL(Parent.QA_Status__c, &apos;Approved&apos;)),
NOT(ISPICKVAL(Parent.QA_Status__c, &apos;Rejected&apos;)),
NOT(Solve_Email__c))</errorConditionFormula>
    <errorMessage>There is a valid auto-solve response on this Case that needs to be approved or rejected before you will be able to manually email the customer. To prevent losing the email you&apos;ve composed, copy it before you proceed with the auto-solve QA process.</errorMessage>
</ValidationRule>